--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       HTTP Status Cats bot responds you with a short description of each status code with the <a href="https://http.cat/" target="_blank">HTTP Status Cats</a> picture. 🐱
     </p>
 
-    <img src="images/slack-httpstatuscats.gif">
+    <img src="images/slack-httpstatuscats.gif" style="width:444px;height:303px;">
 
     <h2>Install it on Your Slack Team</h2>
 
