Add more images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
     <h2>About HTTP Status Cats</h2>
 
+    <div class="status">
+      <img src="images/301.jpg">
+      <img src="images/401.jpg">
+      <img src="images/431.jpg">
+    </div>
+
     <p>Internet is made of cats, so why not HTTP Status codes, explained with cats?</p>
     <p>Originally, HTTP Status Cats was created by yours truly, <em>me</em> in 2011! It is best described on <a href="http://knowyourmeme.com/memes/http-status-cats" target="_blank">Know Your Meme</a>.</p>
     <p>I would never imagined I had such a 10-min fame at that time I created and posted the cat pics on Flickr.
