Rework the static html page

--- a/index.html
+++ b/index.html
@@ -19,20 +19,30 @@
       <h1>HTTP Status Cats for Slack</h1>
     </header>
 
+    <div  class="logo">
+      <img src="public/images/slack-icon.png">
+      <img src="public/images/plus.png">
+      <img src="public/images/httpstatus-icon.png">
+    </div>
+
     <p>
       Wanna quickly look up a definition of http status code on Slack?
-      Once installed it in your Slack team, simply type <code>/httpstatus</code> slash command followed by a status code (e.g. 404).
+      Once installed it in your Slack team, simply type <code>/httpstatus</code> slash command followed by a status code (e.g. <code>404</code>).
       HTTP Status Cats bot responds you with a short description of each status code with the <a href="https://http.cat/" target="_blank">HTTP Status Cats</a> picture. 🐱
     </p>
 
     <h2>Install it on Your Slack Team</h2>
 
-    Setting up HTTP Status Cats in Slack is simple.
-    Just click the button to log in to your Slack account and choose a team!
+    <p>Setting up HTTP Status Cats in Slack is simple.
+    Just click the button to log in to your Slack account and choose a team!</p>
 
     <a href="https://slack.com/oauth/authorize?scope=commands+team%3Aread&client_id=54308870179.89146186500"><img alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack@2x.png" /></a>
 
-    <img src="images/slack-httpstatuscats.gif" style="width:444px;height:303px;">
+    <p>Once you install the bot, you should be able to use the slash command on your team chat room.
+      Just type <code>/httpstatus</code> followed by a status code.</p>
+
+
+    <img src="public/images/slack-httpstatuscats.gif" class="gif">
 
     <h2>About HTTP Status Cats</h2>
 
@@ -45,9 +55,9 @@
     <p>A good time.</p>
 
     <div class="status">
-      <img src="images/301.jpg">
-      <img src="images/401.jpg">
-      <img src="images/431.jpg">
+      <img src="public/images/301.jpg">
+      <img src="public/images/401.jpg">
+      <img src="public/images/431.jpg">
     </div>
 
     <p>HTTP Status Cats are later well-adopted by communities,
