Add Tweet and GitHub buttons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body>
 
   <section class="container">
+    <div class="social">
+      <a href="https://twitter.com/share?text=HTTP%20Status%20Cats%20for%20Slack:%20" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://github.com/girliemac/slack-httpstatuscats" target="_blank>"<i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+    </div>
+
     <header>
       <h1>HTTP Status Cats for Slack</h1>
     </header>
