--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section class="container">
     <div class="social">
-      <a href="https://twitter.com/share?text=HTTP%20Status%20Cats%20for%20Slack:%20" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://twitter.com/share?text=HTTP%20Status%20Cats%20for%20Slack:%20by%20@girlie_mac 🐈" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       <a href="https://github.com/girliemac/slack-httpstatuscats" target="_blank>"<i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
     </div>
 
@@ -71,7 +71,7 @@
       The page is also available in Catalan language, as its TLD shows!
 
     <footer>
-      Developed by Tomomi ❤ Imura (<a href="https://twitter.com/girlie_mac">@girlie_mac</a>)
+      Developed by Tomomi ❤ Imura (<a href="https://twitter.com/girlie_mac">@girlie_mac</a>) with Node.js and Love
     </footer>
 
   </section>
