--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
       especially HTTP Status Cats API and its awesome domain, <strong>http.cat</strong> by Rogério Vicente.
       The page is also available in Catalan language, as its TLD shows!
 
+    <h3>Milo and Sandy</h3>
+    <div class="status">
+      <img src="public/images/204.jpg">
+    </div>
+    <p>What has changed since 2011 is that Milo (right: black and fuzzy) and Sandy (left: tabby) as the cats of Status 204 are no longer with me.
+    Both kitties has crossed the Rainbow Bridge in 2012 and 2015 respectively. </p>
+
     <footer>
       Developed by Tomomi ❤ Imura (<a href="https://twitter.com/girlie_mac">@girlie_mac</a>) with Node.js and Love
     </footer>
